// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse almost eligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "hasActiveSentence": {
      "hasActiveSentence": true,
    },
    "supervisionLevelIsNotInternalUnknown": null,
    "supervisionLevelIsNotInterstateCompact": null,
    "supervisionLevelIsNotUnassigned": null,
    "supervisionNotPastFullTermCompletionDateOrUpcoming90Days": {
      "eligibleDate": "2029-06-06",
    },
    "usTnIneligibleOffensesExpired": null,
    "usTnNoArrestsInPastYear": {},
    "usTnNoDuiOffenseInPast5Years": null,
    "usTnNoHighSanctionsInPastYear": {},
    "usTnNoMurderConvictions": null,
    "usTnNoPriorRecordWithIneligibleCrOffense": null,
    "usTnNoRecentCompliantReportingRejections": {},
    "usTnNoZeroToleranceCodesSpans": null,
    "usTnNotInJudicialDistrict17WhileOnProbation": null,
    "usTnNotOnLifeSentenceOrLifetimeSupervision": {
      "lifetimeFlag": false,
    },
    "usTnNotPermanentlyRejectedFromCompliantReporting": null,
    "usTnNotServingIneligibleCrOffense": {},
    "usTnNotServingUnknownCrOffense": null,
    "usTnOnEligibleLevelForSufficientTime": {
      "eligibleDate": 2020-08-01T00:00:00.000Z,
      "eligibleLevel": "MINIMUM",
      "startDateOnEligibleLevel": 2019-08-01T00:00:00.000Z,
    },
    "usTnPassedDrugScreenCheck": {
      "hasAtLeast1NegativeDrugTestPastYear": [
        {
          "negativeScreenDate": 2023-02-28T00:00:00.000Z,
          "negativeScreenResult": "DRUN",
        },
        {
          "negativeScreenDate": 2023-01-28T00:00:00.000Z,
          "negativeScreenResult": "DRUN",
        },
      ],
      "latestDrugTestIsNegative": {
        "latestDrugScreenDate": 2023-02-28T00:00:00.000Z,
        "latestDrugScreenResult": "DRUN",
      },
    },
    "usTnSpecialConditionsAreCurrent": {
      "speNoteDue": null,
    },
  },
  "externalId": "101",
  "formInformation": {
    "currentOffenses": [
      "STOLEN PROPERTY",
    ],
    "docketNumbers": [
      "10000",
    ],
    "expirationDate": 2030-02-12T00:00:00.000Z,
    "judicialDistrict": [
      "1",
    ],
    "restitutionAmt": 100,
    "restitutionMonthlyPayment": 0,
    "restitutionMonthlyPaymentTo": [
      "PAYMENT TO",
    ],
    "sentenceLengthDays": 3629,
    "sentenceStartDate": 2020-03-07T00:00:00.000Z,
    "supervisionFeeArrearaged": true,
    "supervisionFeeArrearagedAmount": 700,
    "supervisionFeeAssessed": 700,
    "supervisionFeeWaived": false,
  },
  "ineligibleCriteria": {
    "usTnFinesFeesEligible": {
      "hasFinesFeesBalanceBelow500": {
        "amountOwed": 700,
      },
      "hasPayments3ConsecutiveMonths": {
        "amountOwed": 700,
        "consecutiveMonthlyPayments": 0,
      },
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "metadata": {
    "convictionCounties": [
      "123ABC",
    ],
    "ineligibleOffensesExpired": [],
    "mostRecentArrestCheck": {
      "contactDate": 2023-04-01T00:00:00.000Z,
      "contactType": "ARRN",
    },
    "mostRecentSpeNote": {
      "contactDate": 2019-08-15T00:00:00.000Z,
      "contactType": "SPET",
    },
  },
  "stateCode": "US_TN",
}
`;

exports[`parse eligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "hasActiveSentence": {
      "hasActiveSentence": true,
    },
    "supervisionLevelIsNotInternalUnknown": null,
    "supervisionLevelIsNotInterstateCompact": null,
    "supervisionLevelIsNotUnassigned": null,
    "supervisionNotPastFullTermCompletionDateOrUpcoming90Days": {
      "eligibleDate": "2029-06-06",
    },
    "usTnFinesFeesEligible": {
      "hasFinesFeesBalanceBelow500": {
        "amountOwed": 400,
      },
      "hasPayments3ConsecutiveMonths": {
        "amountOwed": 400,
        "consecutiveMonthlyPayments": null,
      },
    },
    "usTnIneligibleOffensesExpired": null,
    "usTnNoArrestsInPastYear": {},
    "usTnNoDuiOffenseInPast5Years": null,
    "usTnNoHighSanctionsInPastYear": {},
    "usTnNoMurderConvictions": null,
    "usTnNoPriorRecordWithIneligibleCrOffense": null,
    "usTnNoRecentCompliantReportingRejections": {},
    "usTnNoZeroToleranceCodesSpans": null,
    "usTnNotInJudicialDistrict17WhileOnProbation": null,
    "usTnNotOnLifeSentenceOrLifetimeSupervision": {
      "lifetimeFlag": false,
    },
    "usTnNotPermanentlyRejectedFromCompliantReporting": null,
    "usTnNotServingIneligibleCrOffense": {},
    "usTnNotServingUnknownCrOffense": null,
    "usTnOnEligibleLevelForSufficientTime": {
      "eligibleDate": 2020-08-01T00:00:00.000Z,
      "eligibleLevel": "MINIMUM",
      "startDateOnEligibleLevel": 2019-08-01T00:00:00.000Z,
    },
    "usTnPassedDrugScreenCheck": {
      "hasAtLeast1NegativeDrugTestPastYear": [
        {
          "negativeScreenDate": 2023-02-28T00:00:00.000Z,
          "negativeScreenResult": "DRUN",
        },
        {
          "negativeScreenDate": 2023-01-28T00:00:00.000Z,
          "negativeScreenResult": "DRUN",
        },
      ],
      "latestDrugTestIsNegative": {
        "latestDrugScreenDate": 2023-02-28T00:00:00.000Z,
        "latestDrugScreenResult": "DRUN",
      },
    },
    "usTnSpecialConditionsAreCurrent": {
      "speNoteDue": null,
    },
  },
  "externalId": "101",
  "formInformation": {
    "currentOffenses": [
      "STOLEN PROPERTY",
    ],
    "docketNumbers": [
      "10000",
    ],
    "expirationDate": 2030-02-12T00:00:00.000Z,
    "judicialDistrict": [
      "1",
    ],
    "restitutionAmt": 100,
    "restitutionMonthlyPayment": 0,
    "restitutionMonthlyPaymentTo": [
      "PAYMENT TO",
    ],
    "sentenceLengthDays": 3629,
    "sentenceStartDate": 2020-03-07T00:00:00.000Z,
    "supervisionFeeArrearaged": true,
    "supervisionFeeArrearagedAmount": 700,
    "supervisionFeeAssessed": 700,
    "supervisionFeeWaived": false,
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {
    "convictionCounties": [
      "123ABC",
    ],
    "ineligibleOffensesExpired": [],
    "mostRecentArrestCheck": {
      "contactDate": 2023-04-01T00:00:00.000Z,
      "contactType": "ARRN",
    },
    "mostRecentSpeNote": {
      "contactDate": 2019-08-15T00:00:00.000Z,
      "contactType": "SPET",
    },
  },
  "stateCode": "US_TN",
}
`;
